changes to invoice, create new sale and usermngr

--- a/InventoryManager/src/Invoice/Invoice.html
+++ b/InventoryManager/src/Invoice/Invoice.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row align-items-center mb-5">
       <div class="col-4">
-          <h2>Invoice</h2> 
+          <h2>Purchase</h2> 
       </div>
       <div class="col-4">
           <div class="input-group mt-3">
@@ -17,7 +17,7 @@
       <div class="col-1">
       </div> 
       <div class="col">
-              <a href="../Main/Main.html?page=newInvoice"><button  type="submit" value="Submit"  title="Create Invoice"><i class="fa-solid fa-plus fa-lg" style="color:white"></i> New Invoice</button></a>
+              <a href="../Main/Main.html?page=newInvoice"><button  type="submit" value="Submit"  title="Create Invoice"><i class="fa-solid fa-plus fa-lg" style="color:white"></i> New Purchase</button></a>
       </div>       
   </div>
       <table id="invoiceTable">
