--- a/InventoryManager/src/Order/Order.html
+++ b/InventoryManager/src/Order/Order.html
@@ -16,7 +16,7 @@
       <div class="col-1">
       </div> 
       <div class="col">
-              <a href="../Main/Main.html?page=newOrder"><button id="btnNewOrder" type="submit" value="Submit"><i class="fa-solid fa-plus fa-lg" style="color:white" title="Add Item"></i> New order</button></a>
+              <a href="../Main/Main.html?page=newOrder"><button id="btnNewOrder" type="submit" value="Submit"><i class="fa-solid fa-plus fa-lg" style="color:white" title="Add Item"></i> New Sale</button></a>
       </div>       
   </div>
       <table id="orderTable">
