--- a/InventoryManager/src/UsersManager/UserMngr.html
+++ b/InventoryManager/src/UsersManager/UserMngr.html
@@ -5,7 +5,7 @@
         </div>
            <div class="col-4">
             
-                <button title="New User" type="submit" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="userMngrF.editUser('add')"> 
+                <button title="New User" type="submit" onclick="userMngrF.editUser('add')"> 
                     <i class="fa-solid fa-plus fa-lg"></i>  New User</button>
             
         </div>
@@ -56,7 +56,7 @@
                         <div>
                             <!-- <label class="viewData"></label> -->
                             <input id="Fname" name="Fname" placeholder="First name" type="text"
-                                 class="editData" required disabled />
+                                 class="editData form-control form-control-sm" required disabled />
                         </div>
                     </div>
                     <div class="col-6">
@@ -66,7 +66,7 @@
                         <div>
                             <!-- <label class="viewData"></label> -->
                             <input id="lastName" name="lastName" placeholder="Last name" type="text"
-                                 class="editData" required disabled />
+                                 class="editData form-control form-control-sm" required disabled />
                         </div>
                     </div>
                     <div class="col-6">
@@ -76,7 +76,7 @@
                         <div>
                             <!-- <label class="viewData"></label> -->
                             <input id="email" name="email" placeholder="EG: something@domain.com" type="text"
-                                 class="editData" required disabled />
+                                 class="editData form-control form-control-sm" required disabled />
                         </div>
                     </div>
                     <div class="col-6">
@@ -86,7 +86,7 @@
                         <div>
                             <!-- <label class="viewData"></label> -->
                             <input id="pass" name="pass" placeholder="Password" type="text"
-                             class="editData" required disabled />
+                             class="editData form-control form-control-sm" required disabled />
                         </div>
                     </div>
                     <div class="col-6">
@@ -96,7 +96,7 @@
                         <div>
                             <!-- <label class="viewData"></label> -->
                             <select id="role" name="role" placeholder="Role"
-                              class="editData" required disabled >
+                              class="editData form-control form-control-sm" required disabled >
                                 <option value="Admin">Admin</option>
                                 <option value="Manager">Manager</option>
                                 <option value="Sales">Sales</option>
