form fieldset padding y label de persons

--- a/InventoryManager/src/Invoice/newInvoice.html
+++ b/InventoryManager/src/Invoice/newInvoice.html
@@ -44,9 +44,9 @@
 					<div>
 						<label class="viewData" data-bind="telephone"></label>
 						<div class="form-floating editData">
-							<input id="telephone" class="form-control form-control-sm" placeholder="905 735 2211" 
+							<input id="telephone" class="form-control form-control-sm" placeholder="(905) 735-2211" 
 								class="editData form-control"  type="tel" required>
-							<label for="telephone">EG: 905 735 2211</label>
+							<label for="telephone">EG: (905) 735-2211</label>
 						</div>
 					</div>
 				</div>
