--- a/InventoryManager/src/Supplier/viewSupplier.html
+++ b/InventoryManager/src/Supplier/viewSupplier.html
@@ -34,7 +34,8 @@
                     <div>
                         <label class="viewData" data-bind="supplierPhone"></label>
                         <input id="supplierPhone" data-bind="supplierPhone" hidden="true" name="supplierPhone"
-                        placeholder="289 123 4567" class="editData" type="tel" required />
+                        placeholder="(905) 735-2211" class="editData" type="tel" required />
+                        <label for="telephone">EG: (905) 735-2211</label>
                     </div>
                 </div>
                 <div class="col">
