--- a/InventoryManager/src/Inventory/ViewInventory.html
+++ b/InventoryManager/src/Inventory/ViewInventory.html
@@ -19,8 +19,8 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="productName"></label>
-                        <input Class "form-control-sm" hidden="true" id="productName" data-bind="productName" name="productName"
-                            placeholder="Product Name" type="text" required />
+                        <input class="editData" hidden="true" id="productName" data-bind="productName" name="productName"
+                            placeholder="Product Name" type="text" required Class="form-control form-control-sm"/>
                     </div>
                 </div>
                 <div class="col">
@@ -33,7 +33,7 @@
                     <div>
                         <label class="viewData" data-bind="productDescription"></label>
                         <input class="editData" hidden="true" id="productDescription" data-bind="productDescription" name="productDescription"
-                            placeholder="Product Description" type="text" required />
+                            placeholder="Product Description" type="text" required Class="form-control form-control-sm"/>
                     </div>
                     <div class="collapse bg-primary text-white p-1" id="collapseHelp3">
                         <span>Lists various details or features of the product in stock.</span>
@@ -51,7 +51,7 @@
                     <div>
                         <label class="viewData" data-bind="productDetails"></label>
                         <input class="editData" hidden="true" id="productDetails" data-bind="productDetails" name="productDetails"
-                            placeholder="Product Details" type="text" required />
+                            placeholder="Product Details" type="text" required Class="form-control form-control-sm"/>
                     </div>
                     <div class="collapse bg-primary text-white p-1" id="collapseHelp4">
                         <span>Describes the presentation and storage method of the product.</span>
@@ -64,7 +64,7 @@
                     <div>
                         <label class="viewData" data-bind="productBrand"></label>
                         <input class="editData" hidden="true" id="productBrand" data-bind="productBrand" name="productBrand"
-                            placeholder="Product Brand" type="text" required />
+                            placeholder="Product Brand" type="text" required Class="form-control form-control-sm"/>
                     </div>
                 </div>
 
@@ -80,7 +80,7 @@
                     <div>
                         <label class="viewData" data-bind="UPC"></label>
                         <input class="editData" hidden="true" id="UPC" data-bind="UPC" name="UPC"
-                            placeholder="Product UPC" type="number" required />
+                            placeholder="Product UPC" type="number" required Class="form-control form-control-sm"/>
                     </div>
                     <div class="collapse bg-primary text-white p-1" id="collapseHelp6">
                         <span>The Universal Product Code (UPC) is a barcode that identifies the product internally in the company.</span>
@@ -94,7 +94,7 @@
                     <div>
                         <label class="viewData" data-bind="inventoryQty"></label>
                         <input class="editData" hidden="true" id="quantity" data-bind="inventoryQty" name="quantity"
-                            placeholder="Quantity" type="number" required />
+                            placeholder="Quantity" type="number" required Class="form-control form-control-sm"/>
                     </div>
                 </div>
             </div>
@@ -110,7 +110,7 @@
                         <label class="viewData" data-bind="inventoryCost"></label>
                         <div class="form-floating editData" hidden="true">
                             <input id="cost" data-bind="inventoryCost" class="form-control form-control-sm"
-                                placeholder="CA$ 200.00" type="number" min="0.01" max="100000.00" class="editData form-control" required>
+                                placeholder="CA$ 200.00" type="number" min="0.01" max="100000.00" class="editData form-control" required Class="form-control form-control-sm">
                             <label for="cost">EG: CA$ 200.00</label>
                         </div>
                         <div class="collapse bg-primary text-white p-1" id="collapseHelp8">
@@ -129,7 +129,7 @@
                         <label class="viewData" data-bind="inventoryPrice"></label>
                         <div class="form-floating editData" hidden="true">
                             <input id="Price" data-bind="inventoryPrice" class="form-control form-control-sm"
-                            placeholder="CA$ 200.00" type="number" min="0.01" max="100000.00" class="editData form-control" required>
+                            placeholder="CA$ 200.00" type="number" min="0.01" max="100000.00" class="editData form-control" required Class="form-control form-control-sm">
                             <label for="Price">EG: CA$ 1000.00</label>
                         </div>
                         <div class="collapse bg-primary text-white p-1" id="collapseHelp9">
@@ -158,7 +158,7 @@
                     <div>
                         <label class="viewData" data-bind="inventoryMaxStorage"></label>
                         <input class="editData" hidden="true" id="Maximum" data-bind="inventoryMaxStorage"
-                            name="Maximum" placeholder="Maximum in storage" type="number" required />
+                            name="Maximum" placeholder="Maximum in storage" type="number" required Class="form-control form-control-sm"/>
                     </div>
                     <div class="collapse bg-primary text-white p-1" id="collapseHelp10">
                         <span>Maximum number of units of the product that the inventory stores.</span>
@@ -184,7 +184,7 @@
                     <div>
                         <label class="viewData" data-bind="inventoryAlertStorage"></label>
                         <input class="editData" hidden="true" id="Minimum" data-bind="inventoryAlertStorage"
-                            name="Minimum" placeholder="Minimum in storage" type="number" required />
+                            name="Minimum" placeholder="Minimum in storage" type="number" required Class="form-control form-control-sm"/>
                     </div>
                     <div class="collapse bg-primary text-white p-1" id="collapseHelp12">
                         <span>Minimum number of units of the product that the inventory stores.</span>
