--- a/InventoryManager/src/Product/ViewProduct.html
+++ b/InventoryManager/src/Product/ViewProduct.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col">
                     <div>
-                        <label for="UPC"><strong>*UPC:</strong></label>
+                        <label for="UPC"><strong>UPC (*):</strong></label>
                     </div>
                     <div>
                         <label class="viewData" data-bind="UPC"></label>
@@ -17,7 +17,7 @@
                 </div>
                 <div class="col">
                     <div>
-                        <label for="productName"><strong>*Product name:</strong></label>
+                        <label for="productName"><strong>Product name (*):</strong></label>
                     </div>
                     <div>
                         <label class="viewData" data-bind="productName"></label>
@@ -29,21 +29,7 @@
             <div class="row">
                 <div class="col">
                     <div>
-                        <label for="productDescription"><strong>*Description:</strong></label>
-                    </div>
-
-                    <div>
-                        <label class="viewData" data-bind="productDescription"></label>
-                        <input id="productDescription" data-bind="productDescription" class="editData"
-                            name="productDescription" hidden="true" placeholder="Description of the product" type="text"
-                            required />
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div>
-                        <label for="productBrand"><strong>*Brand:</strong></label>
+                        <label for="productBrand"><strong>Brand (*):</strong></label>
                     </div>
                     <div>
                         <label class="viewData" data-bind="productBrand"></label>
@@ -53,7 +39,7 @@
                 </div>
                 <div class="col">
                     <div>
-                        <label for="productDetails"><strong>*Details:</strong></label>
+                        <label for="productDetails"><strong>Details:</strong></label>
                     </div>
                     <div>
                         <label class="viewData" data-bind="productDetails"></label>
@@ -63,9 +49,10 @@
                 </div>
 
             </div>
+            <div class="row">
             <div class="col">
                 <div>
-                    <label for="productType"><strong>*Type:</strong></label>
+                    <label for="productType"><strong>Type:</strong></label>
                 </div>
                 <div>
                     <label class="viewData" data-bind="productType"></label>
@@ -73,10 +60,9 @@
                         placeholder="Type of the product" class="editData" type="text" required />
                 </div>
             </div>
-            <div class="row">
                 <div class="col">
                     <div>
-                        <label for="productAVGCost"><strong>*Average Cost:</strong></label>
+                        <label for="productAVGCost"><strong>Average Cost (*):</strong></label>
                     </div>
                     <div>
                         <label class="viewData" data-bind="productAVGCost"></label>
@@ -88,9 +74,23 @@
                     </div>
 
                 </div>
+            </div>
+            <div class="row">
                 <div class="col">
                     <div>
-                        <label for="productPrice"><strong>*Price:</strong></label>
+                        <label for="productDescription"><strong>Description:</strong></label>
+                    </div>
+
+                    <div>
+                        <label class="viewData" data-bind="productDescription"></label>
+                        <input id="productDescription" data-bind="productDescription" class="editData"
+                            name="productDescription" hidden="true" placeholder="Description of the product" type="text"
+                            required />
+                    </div>
+                </div>
+                <div class="col">
+                    <div>
+                        <label for="productPrice"><strong>Price (*):</strong></label>
                     </div>
                     <div>
                         <label class="viewData" data-bind="productPrice"></label>
@@ -103,7 +103,9 @@
 
                 </div>
 
+
             </div>
+
             <br /><br />
         </fieldset>
         <fieldset>
@@ -115,11 +117,6 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="productCreatedAt"></label>
-                        <div class="form-floating editData">
-                            <input type="date" data-bind="productCreatedAt" class="form-control form-control-sm"
-                                id="productCreatedAt" placeholder="yyyy/mm/dd">
-                            <label for="productCreatedAt">Product creation date. EG: yyyy/mm/dd</label>
-                        </div>
                     </div>
                 </div>
                 <div class="col">
@@ -128,10 +125,6 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="productUpdateAt"></label>
-                        <div class="form-floating editData">
-                            <input type="date" data-bind="productUpdateAt" class="form-control form-control-sm"
-                                id="productUpdateAt" placeholder="yyyy/mm/dd">
-                            <label for="productUpdateAt">Updated product date. EG: yyyy/mm/dd</label>
                         </div>
                     </div>
                 </div>
@@ -140,6 +133,12 @@
             <br /><br />
 
         </fieldset>
+        <div class="row align-items-center">        
+            <div class="col">
+                <p>(*) Mandatory fields</p>
+            </div>
+        </div>
+
         <div class="row align-items-center">
             <div class="col-2">
                 <button id="btnDelete" hidden="true" type="button" class="btn btn-danger col"
