--- a/InventoryManager/src/Person/ViewPerson.html
+++ b/InventoryManager/src/Person/ViewPerson.html
@@ -285,8 +285,8 @@
                             <Label><strong>Province:</strong></Label>
                         </div>
                         <div class="form-floating">
-                            <select id="province" name="province" data-bind="province" class="editData form-control" type="province"
-                                hidden="true">
+                            <select id="province" name="province" data-bind="province" class="editData form-control"
+                                type="province" hidden="true">
                                 <option value="">Ontario</option>
                                 <option value="Alberta">
                                     Alberta
@@ -391,17 +391,24 @@
             </div>
             <div class="col">
             </div>
-            <div class="col">
-            </div>
-            <div class="col">
+            <div class="col-5">
+                <code>* Mandatory Fields</code>
+                <div id="errorSubmit" hidden>
+                    <div class="alert alert-danger d-flex align-items-center" role="alert">
+                        <i class="fa-solid fa-triangle-exclamation" title="Mandatory fields empty"></i>
+                        <strong>
+                            &nbsp; &nbsp; Please fill out all mandatory fields and try again.
+                        </strong>
+                    </div>
+                </div>
             </div>
             <div class="col">
             </div>
             <div class="col">
                 <button id="btnEdit" hidden="true" type="button" class="btn btn-primary col"
                     onclick="viewPersonF.edit()"><i class="fa-solid fa-pencil"></i> Edit </button>
-                <button id="btnSave" hidden="true" type="submit" class="btn btn-primary col"><i
-                        class="fa-solid fa-save"></i> Save </button>
+                <button id="btnSave" hidden="true" type="submit" class="btn btn-primary col"
+                    onclick="viewPersonF.confirmSave()"><i class="fa-solid fa-save"></i> Save </button>
             </div>
         </div>
     </form>
