--- a/InventoryManager/src/Inventory/ListViewInventory.html
+++ b/InventoryManager/src/Inventory/ListViewInventory.html
@@ -11,7 +11,7 @@
                 </div>
                 <input type="text" id="myInput" onkeyup="inventoryTableF.filerTable()" class="form-control"
                      placeholder="Filter by product, type or description"
-                    aria-label="Filter by product, brand, type or description" aria-describedby="basic-addon1">
+                    aria-label="Filter by product, brand, type or description" aria-describedby="basic-addon1" Class "form-control form-control-sm">
             </div>
         </div>
         <div class="col-1">
