--- a/InventoryManager/src/Inventory/ViewInventory.html
+++ b/InventoryManager/src/Inventory/ViewInventory.html
@@ -19,8 +19,8 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="productName"></label>
-                        <input class="editData" hidden="true" id="productName" data-bind="productName" name="productName"
-                            placeholder="Product Name" type="text" required Class="form-control form-control-sm"/>
+                        <input class="editData form-control form-control-sm" hidden="true" id="productName" data-bind="productName" name="productName"
+                            placeholder="Product Name" type="text" required />
                     </div>
                 </div>
                 <div class="col">
@@ -32,8 +32,8 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="productDescription"></label>
-                        <input class="editData" hidden="true" id="productDescription" data-bind="productDescription" name="productDescription"
-                            placeholder="Product Description" type="text" required Class="form-control form-control-sm"/>
+                        <input class="editData form-control form-control-sm" hidden="true" id="productDescription" data-bind="productDescription" name="productDescription"
+                            placeholder="Product Description" type="text" required />
                     </div>
                     <div class="collapse bg-primary text-white p-1" id="collapseHelp3">
                         <span>Lists various details or features of the product in stock.</span>
@@ -50,8 +50,8 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="productDetails"></label>
-                        <input class="editData" hidden="true" id="productDetails" data-bind="productDetails" name="productDetails"
-                            placeholder="Product Details" type="text" required Class="form-control form-control-sm"/>
+                        <input class="editData form-control form-control-sm" hidden="true" id="productDetails" data-bind="productDetails" name="productDetails"
+                            placeholder="Product Details" type="text" required />
                     </div>
                     <div class="collapse bg-primary text-white p-1" id="collapseHelp4">
                         <span>Describes the presentation and storage method of the product.</span>
@@ -63,8 +63,8 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="productBrand"></label>
-                        <input class="editData" hidden="true" id="productBrand" data-bind="productBrand" name="productBrand"
-                            placeholder="Product Brand" type="text" required Class="form-control form-control-sm"/>
+                        <input class="editData form-control form-control-sm" hidden="true" id="productBrand" data-bind="productBrand" name="productBrand"
+                            placeholder="Product Brand" type="text" required />
                     </div>
                 </div>
 
@@ -79,8 +79,8 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="UPC"></label>
-                        <input class="editData" hidden="true" id="UPC" data-bind="UPC" name="UPC"
-                            placeholder="Product UPC" type="number" required Class="form-control form-control-sm"/>
+                        <input class="editData form-control form-control-sm" hidden="true" id="UPC" data-bind="UPC" name="UPC"
+                            placeholder="Product UPC" type="number" required />
                     </div>
                     <div class="collapse bg-primary text-white p-1" id="collapseHelp6">
                         <span>The Universal Product Code (UPC) is a barcode that identifies the product internally in the company.</span>
@@ -93,8 +93,8 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="inventoryQty"></label>
-                        <input class="editData" hidden="true" id="quantity" data-bind="inventoryQty" name="quantity"
-                            placeholder="Quantity" type="number" required Class="form-control form-control-sm"/>
+                        <input class="editData form-control form-control-sm" hidden="true" id="quantity" data-bind="inventoryQty" name="quantity"
+                            placeholder="Quantity" type="number" required />
                     </div>
                 </div>
             </div>
@@ -109,8 +109,8 @@
                     <div>
                         <label class="viewData" data-bind="inventoryCost"></label>
                         <div class="form-floating editData" hidden="true">
-                            <input id="cost" data-bind="inventoryCost" class="form-control form-control-sm"
-                                placeholder="CA$ 200.00" type="number" min="0.01" max="100000.00" class="editData form-control" required Class="form-control form-control-sm">
+                            <input id="cost" data-bind="inventoryCost" 
+                                placeholder="CA$ 200.00" type="number" min="0.01" max="100000.00" class="editData  form-control form-control-sm" required >
                             <label for="cost">EG: CA$ 200.00</label>
                         </div>
                         <div class="collapse bg-primary text-white p-1" id="collapseHelp8">
@@ -157,8 +157,8 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="inventoryMaxStorage"></label>
-                        <input class="editData" hidden="true" id="Maximum" data-bind="inventoryMaxStorage"
-                            name="Maximum" placeholder="Maximum in storage" type="number" required Class="form-control form-control-sm"/>
+                        <input class="editData  form-control form-control-sm" hidden="true" id="Maximum" data-bind="inventoryMaxStorage"
+                            name="Maximum" placeholder="Maximum in storage" type="number" required />
                     </div>
                     <div class="collapse bg-primary text-white p-1" id="collapseHelp10">
                         <span>Maximum number of units of the product that the inventory stores.</span>
@@ -183,8 +183,8 @@
                     </div>
                     <div>
                         <label class="viewData" data-bind="inventoryAlertStorage"></label>
-                        <input class="editData" hidden="true" id="Minimum" data-bind="inventoryAlertStorage"
-                            name="Minimum" placeholder="Minimum in storage" type="number" required Class="form-control form-control-sm"/>
+                        <input class="editData form-control form-control-sm" hidden="true" id="Minimum" data-bind="inventoryAlertStorage"
+                            name="Minimum" placeholder="Minimum in storage" type="number" required />
                     </div>
                     <div class="collapse bg-primary text-white p-1" id="collapseHelp12">
                         <span>Minimum number of units of the product that the inventory stores.</span>
